--- a/app/src/main/res/layout-large/activity_test.xml
+++ b/app/src/main/res/layout-large/activity_test.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="10dp"
             android:layout_gravity="center_vertical"
             android:theme="@style/Widget.AppCompat.Spinner"
-            android:background="@drawable/spinner_shape">
+            android:background="@drawable/spin_bg">
         </Spinner>
 
         <HorizontalScrollView
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_fullscreen_black_24dp" />
+            app:srcCompat="@drawable/ic_fullscreen_black_24dp" />
 
     </RelativeLayout>
 
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/question_number"
             android:layout_weight="2.5"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:gravity="center_horizontal|center"
             android:text="Question"/>
 
@@ -75,8 +75,8 @@
             android:id="@+id/menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginStart="1dp"
             app:srcCompat="@drawable/ic_info_black_24dp"
             android:layout_gravity="end"
             android:visibility="visible"
@@ -105,7 +105,7 @@
                 android:layout_marginTop="1dp"
                 android:layout_marginBottom="5dp"
                 android:layout_toEndOf="@+id/timer_icon"
-                android:textSize="28sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
         </RelativeLayout>
 
@@ -125,10 +125,11 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_below="@+id/margin"
-        android:layout_above="@+id/action_buttons">
+        android:layout_above="@+id/action_buttons"
+        android:weightSum="2">
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1">
             <LinearLayout
@@ -138,7 +139,7 @@
                 <ImageView
                     android:id="@+id/question_img"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:scaleType="fitXY"
                     android:gravity="start" />
 
@@ -175,12 +176,12 @@
 
     </LinearLayout>
 
-<!--    <View
+    <View
         android:id="@+id/margin2"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#000000"
-        android:layout_below="@+id/question_screen" />-->
+        android:layout_below="@+id/question_screen" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -209,7 +210,7 @@
             <TextView
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Unbark"
+                android:text="Unmark"
                 android:layout_weight="3"
                 android:textColor="#000000"
                 android:gravity="center"/>
