--- a/app/src/main/res/layout/popup_screen.xml
+++ b/app/src/main/res/layout/popup_screen.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/popup_element"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="380dp"
+    android:layout_height="300dp"
     android:elevation="5dp"
     android:background="@drawable/popup_elevation"
     android:padding="10px">
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal"
-            android:columnWidth="100dp"
+            android:columnWidth="50dp"
             android:numColumns="auto_fit"
             android:verticalSpacing="24dp"
             android:horizontalSpacing="10dp"
