--- a/app/src/main/res/layout-large/activity_test.xml
+++ b/app/src/main/res/layout-large/activity_test.xml
@@ -19,8 +19,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="center_vertical"
-            android:theme="@style/Widget.AppCompat.Spinner"
-            android:background="@drawable/spin_bg">
+            android:theme="@style/Widget.AppCompat.Spinner">
         </Spinner>
 
         <HorizontalScrollView
@@ -67,7 +66,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/question_number"
             android:layout_weight="2.5"
-            android:textSize="15sp"
+            android:textSize="22sp"
             android:gravity="center_horizontal|center"
             android:text="Question"/>
 
@@ -77,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:layout_marginStart="1dp"
-            app:srcCompat="@drawable/ic_info_black_24dp"
+            app:srcCompat="@drawable/ic_info_black_40dp"
             android:layout_gravity="end"
             android:visibility="visible"
             android:layout_weight="0.5"/>
@@ -95,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="5dp"
                 android:layout_gravity="center_vertical"
-                app:srcCompat="@drawable/ic_timer_black_24dp" />
+                app:srcCompat="@drawable/ic_timer_black_40dp" />
 
             <TextView
                 android:id="@+id/timer"
@@ -129,33 +128,54 @@
         android:weightSum="2">
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="start"
             android:layout_weight="1">
-            <LinearLayout
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/question_img"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/question_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scaleType="fitXY"
-                    android:gravity="start" />
+                android:layout_height="match_parent"
+                android:scaleType="center"
+                android:gravity="start" />
 
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/question_Data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_gravity="center"
-                    android:visibility="invisible"
-                    android:elevation="5dp"
-                    app:srcCompat="@drawable/ic_input_24dp" />
+            <View
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:background="#000000"
+                android:id="@+id/view" />
 
-            </LinearLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btn_group_info"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:layout_toStartOf="@id/view"
+                android:focusable="true"
+                android:scaleType="center"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_input_24dp" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btn_qadditional"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:focusable="true"
+                android:scaleType="center"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/ic_launch_24dp" />
+
+        </RelativeLayout>
 
         </ScrollView>
 
