--- a/app/src/main/res/layout-large/optionslist.xml
+++ b/app/src/main/res/layout-large/optionslist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -14,19 +14,24 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/rb_option"
-            android:layout_gravity="center"/>
+            android:layout_marginTop="30dp"
+            android:id="@+id/rb_option"/>
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:scaleType="fitXY"
-            android:layout_marginStart="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:id="@+id/iv_opmedia"
-            android:layout_gravity="start"/>
+            android:layout_toEndOf="@+id/rb_option"
+            android:layout_marginBottom="5dp" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#000000"
+            android:layout_below="@+id/iv_opmedia"
+            android:layout_marginBottom="5dp" />
 
-
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
