--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -14,13 +14,11 @@
         android:id="@+id/header">
         <Spinner
             android:id="@+id/sections"
-            android:layout_width="180dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:layout_gravity="center_vertical"
-            android:theme="@style/Widget.AppCompat.Spinner"
-            android:background="@drawable/spin_bg">
+            android:layout_gravity="center_vertical">
         </Spinner>
 
         <HorizontalScrollView
@@ -134,37 +132,57 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1">
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="180dp"
                 android:orientation="vertical">
-                <View
-                    android:layout_width="2dp"
-                    android:layout_height="match_parent"
-                    android:background="#000000"/>
 
                 <ImageView
                     android:id="@+id/question_img"
                     android:layout_width="match_parent"
-                    android:layout_height="220dp"
-                    android:scaleType="fitXY"
-                    android:adjustViewBounds="false"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
                     android:gravity="start" />
 
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="match_parent"
+                    android:background="#000000"
+                    android:id="@+id/view" />
+
                 <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/question_Data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_marginTop="5dp"
+                    android:id="@+id/btn_group_info"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_gravity="center"
-                    android:visibility="invisible"
+                    android:clickable="true"
+                    android:backgroundTint="#703fb5"
                     android:elevation="5dp"
+                    android:layout_toStartOf="@id/view"
+                    android:focusable="true"
+                    android:scaleType="center"
+                    android:visibility="visible"
                     app:srcCompat="@drawable/ic_input_24dp" />
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/btn_qadditional"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_gravity="center"
+                    android:clickable="true"
+                    android:backgroundTint="#703fb5"
+                    android:elevation="5dp"
+                    android:focusable="true"
+                    android:scaleType="center"
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/ic_launch_24dp" />
 
-            </LinearLayout>
+
+            </RelativeLayout>
 
         </ScrollView>
 
@@ -175,11 +193,10 @@
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/option_view">
 
             </android.support.v7.widget.RecyclerView>
-
 
         </LinearLayout>
 
