--- a/app/src/main/res/layout/optionslist.xml
+++ b/app/src/main/res/layout/optionslist.xml
@@ -2,11 +2,11 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/option_layout">
@@ -19,11 +19,12 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:id="@+id/iv_opmedia"
             android:layout_toEndOf="@+id/rb_option"
             android:layout_marginBottom="5dp" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
