--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.digywood.tms.TestActivity">
+    tools:context="com.digywood.tms.ReviewActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         <Spinner
             android:id="@+id/sections"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_gravity="center_vertical">
@@ -24,7 +24,7 @@
         <HorizontalScrollView
             android:id="@+id/scroll"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:layout_marginStart="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
@@ -75,7 +75,7 @@
             android:layout_marginTop="5dp"
             android:layout_toStartOf="@id/time_layout"
             android:layout_marginEnd="10dp"
-            app:srcCompat="@drawable/ic_info_black_40dp"
+            app:srcCompat="@drawable/ic_info_black_24dp"
             android:layout_gravity="end"
             android:visibility="visible" />
 
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:gravity="center_vertical|center_horizontal"
-                app:srcCompat="@drawable/ic_timer_black_40dp" />
+                app:srcCompat="@drawable/ic_timer_black_24dp" />
 
             <TextView
                 android:id="@+id/timer"
@@ -105,7 +105,7 @@
                 android:layout_marginBottom="5dp"
                 android:layout_marginEnd="10dp"
                 android:gravity="center_vertical|center_horizontal"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -152,8 +152,8 @@
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/btn_group_info"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
                     android:layout_gravity="center"
@@ -164,11 +164,10 @@
                     android:visibility="visible"
                     app:srcCompat="@drawable/ic_input_24dp" />
 
-
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/btn_qadditional"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
                     android:layout_gravity="center"
@@ -216,7 +215,7 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
             android:background="#703fb5"
             android:text="Previous"
@@ -224,7 +223,7 @@
             android:id="@+id/prev_btn"/>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:orientation="horizontal"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -257,7 +256,7 @@
         <Button
             android:id="@+id/next_btn"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
             android:background="#703fb5"
             android:text="Next"
