--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout">
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +21,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:layout_marginStart="5sp"
         android:id="@+id/tv_attempt_score"/>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="35dp"
+        android:layout_toEndOf="@+id/linearLayout"
+        android:text="Review" />
+
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btn_review"
+        android:layout_alignBottom="@+id/btn_review"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="185dp"
+        android:text="Save" />
 
 </RelativeLayout>
