Test screen design change and Question scrollbar functionality modified

--- a/app/src/main/res/layout-large/activity_test.xml
+++ b/app/src/main/res/layout-large/activity_test.xml
@@ -24,7 +24,7 @@
         <HorizontalScrollView
             android:id="@+id/scroll"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="53dp"
             android:layout_marginStart="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
@@ -35,10 +35,10 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/question_scroll"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:gravity="center"
+                android:layout_gravity="center_vertical"
                 android:orientation="horizontal">
             </android.support.v7.widget.RecyclerView>
 
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_alignParentEnd="true"
-            app:srcCompat="@drawable/ic_fullscreen_black_24dp" />
+            app:srcCompat="@drawable/ic_fullscreen_black_40dp" />
 
     </RelativeLayout>
 
@@ -59,14 +59,10 @@
         android:orientation="horizontal"
         android:id="@+id/row2"
         android:layout_below="@+id/header">
-        <TextView
-            android:layout_width="wrap_content"
+
+        <Button
             android:layout_height="wrap_content"
-            android:id="@+id/question_number"
-            android:textSize="15sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="150dp"
-            android:text="Question"/>
+            android:layout_width="wrap_content"/>
 
         <ImageView
             android:id="@+id/menu"
@@ -85,6 +81,7 @@
             android:background="@drawable/spin_bg"
             android:id="@+id/time_layout"
             android:layout_marginEnd="5dp"
+            android:orientation="horizontal"
             android:layout_alignParentEnd="true">
 
             <ImageView
@@ -93,6 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:contentDescription="@string/dummy_content"
                 android:gravity="center_vertical|center_horizontal"
                 app:srcCompat="@drawable/ic_timer_black_40dp" />
 
@@ -101,10 +99,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimary"
-                android:layout_marginTop="1dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginEnd="10dp"
-                android:gravity="center_vertical|center_horizontal"
+                android:layout_gravity="center_vertical"
                 android:textSize="24sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -142,6 +140,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
+                    android:contentDescription="@string/dummy_content"
                     android:gravity="start" />
 
                 <View
@@ -212,56 +211,46 @@
         android:orientation="horizontal"
         android:id="@+id/action_buttons"
         android:layout_alignParentBottom="true"
-        android:weightSum="3">
+        android:weightSum="4">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="#703fb5"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
             android:text="Previous"
-            android:textColor="#FFFFFF"
+            android:layout_marginEnd="5dp"
             android:id="@+id/prev_btn"/>
-        <LinearLayout
+
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:weightSum="7">
+            android:text="Clear Options"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:layout_marginEnd="5dp"
+            android:id="@+id/btn_clear_option"/>
 
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Unmark"
-                android:layout_weight="3"
-                android:textColor="#000000"
-                android:gravity="center"/>
-
-            <Switch
-                android:id="@+id/mark_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Mark"
-                android:layout_weight="3"
-                android:textColor="#000000"
-                android:gravity="center"/>
-        </LinearLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="Mark for Review"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:layout_marginEnd="5dp"
+            android:id="@+id/btn_mark"/>
 
         <Button
             android:id="@+id/next_btn"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:background="#703fb5"
-            android:text="Next"
-            android:textColor="#FFFFFF" />
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:text="Confirm / Skip" />
 
     </LinearLayout>
 
