--- a/app/src/main/res/layout-large/optionslist.xml
+++ b/app/src/main/res/layout-large/optionslist.xml
@@ -2,11 +2,11 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/option_layout">
@@ -14,16 +14,17 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/rb_option"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:id="@+id/iv_opmedia"
             android:layout_toEndOf="@+id/rb_option"
             android:layout_marginBottom="5dp" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -32,6 +33,5 @@
             android:layout_marginBottom="5dp" />
 
     </RelativeLayout>
-
 
 </android.support.constraint.ConstraintLayout>
