--- a/app/src/main/res/layout-large/scroll_bar.xml
+++ b/app/src/main/res/layout-large/scroll_bar.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
-    <View
-        android:layout_width="1dip"
-        android:layout_height="match_parent"
-        android:background="@color/white"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/img_pointer"
+        android:layout_gravity="center"
+        android:layout_marginEnd="1dp"
+        android:layout_marginStart="1dp"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_chevron_right_40dp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:textSize="23sp"
+        android:layout_marginEnd="1dp"
         android:gravity="center"
-        android:id="@+id/Qnumber"/>
-    <View
-        android:layout_width="1dip"
-        android:layout_height="match_parent"
-        android:background="@color/white"/>
+        android:background="@drawable/number_background_large"
+        android:id="@+id/tv_Qnumber"/>
 
 </LinearLayout>
