--- a/app/src/main/res/layout/popup_screen.xml
+++ b/app/src/main/res/layout/popup_screen.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/popup_height"
     android:elevation="5dp"
     android:background="@drawable/popup_elevation"
-    android:padding="10px">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +37,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawablePadding="3sp"
-            android:layout_centerHorizontal="true"
             android:background="@drawable/custom_button"
             android:textColor="#FFFFFF"
             android:text="Close" />
