--- a/app/src/main/res/layout/singlescreen.xml
+++ b/app/src/main/res/layout/singlescreen.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/layout_img"
+        android:contentDescription="@string/dummy_content"
         android:scaleType="fitXY"/>
 
 
@@ -17,6 +18,7 @@
         app:srcCompat="@drawable/ic_close_black_24dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:contentDescription="@string/dummy_content"
         android:layout_alignParentEnd="true"
         android:id="@+id/iv_close"/>
 </RelativeLayout>
