--- a/app/src/main/res/layout/spin_layout.xml
+++ b/app/src/main/res/layout/spin_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="3dp"
+    android:layout_marginEnd="3dp"
     android:layout_weight=".28"
     android:background="@drawable/spin_bg"
     android:orientation="horizontal"
@@ -15,15 +15,16 @@
         android:layout_gravity="center"
         android:background="@android:color/transparent"
         android:gravity="center"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:spinnerMode="dropdown" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
+        android:contentDescription="@string/dummy_content"
         android:src="@drawable/drop" />
 
 </RelativeLayout>
